# Adaptorch-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PUBLICATION.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.speckit/: config.yaml
contracts/examples/: orchestration-run.json  patch-verification-run.json
contracts/jsonschema/: run-spec.v1.json
contracts/openapi/: adaptorch-user-api.v1.yaml
docs/: adaptorchctl-usage.ko.md  algorithm-api-dashboard.md  claude-code-b2c.md  configuration.md  publishing.md  tools.md
docs/brand/: gpt-image-2-brief.md
examples/: claude_desktop_config.json  mcp-http.env.example  omk.mcp.json
specs/: constitution.md
specs/001-mcp-algorithm-hardening/: plan.md  spec.md  tasks.md
specs/002-remote-public-contract/: plan.md  spec.md  tasks.md
specs/003-independent-saas-cli/: plan.md  spec.md  tasks.md
specs/templates/: plan-template.md  spec-template.md  tasks-template.md
