[project]
name = "adaptorch-mcp-monorepo"
version = "0.1.0"
description = "Public monorepo for the AdaptOrch MCP bridge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — Copyright EGG. All rights reserved." }
authors = [{ name = "AdaptOrch maintainers" }]

[tool.uv.workspace]
members = ["packages/adaptorch-mcp"]

[tool.uv.sources]
adaptorch = { git = "https://github.com/dmae97/adaptorch.git" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/adaptorch-mcp/src", "packages/adaptorch-mcp/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "packages/adaptorch-mcp/src"

[tool.pytest.ini_options]
testpaths = ["packages/adaptorch-mcp/tests"]
addopts = "-q"
